compiler/testData/diagnostics/tests/typealias/topLevelTypeAliasesOnly.diag.txt
/topLevelTypeAliasesOnly.kt:7:5: error: nested and local type aliases are not supported
    typealias Nested = Any
    ^^^^^^^^^^^^^^^^^^^^^^
/topLevelTypeAliasesOnly.kt:11:5: error: nested and local type aliases are not supported
    typealias Nested = Any
    ^^^^^^^^^^^^^^^^^^^^^^
/topLevelTypeAliasesOnly.kt:13:9: error: nested and local type aliases are not supported
        typealias Nested = Any
        ^^^^^^^^^^^^^^^^^^^^^^
/topLevelTypeAliasesOnly.kt:15:13: error: nested and local type aliases are not supported
            typealias LocalInMember = Any
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/topLevelTypeAliasesOnly.kt:21:5: error: nested and local type aliases are not supported
    typealias Local = Any
    ^^^^^^^^^^^^^^^^^^^^^
